--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <name>Build Resources</name>
   <description>Build resources for com.groupon.api projects</description>
   <url>https://github.com/groupon/api-build-resources</url>
-  <version>1.4.6-SNAPSHOT</version>
+  <version>1.4.6</version>
 
   <licenses>
     <license>
@@ -108,6 +108,6 @@
     <connection>scm:git:git@github.com:groupon/api-build-resources.git</connection>
     <developerConnection>scm:git:git@github.com:groupon/api-build-resources.git</developerConnection>
     <url>https://github.com/groupon/api-build-resources</url>
-    <tag>HEAD</tag>
+    <tag>build-resources-1.4.6</tag>
   </scm>
 </project>
